feat: add early Docker validation in SandboxManager.start_async() (#542)
* chore: add .worktrees/ to .gitignore

* feat: register need_docker pytest marker

* feat: add pytest_collection_modifyitems hook to auto-skip need_docker tests

* feat: add need_docker marker to Docker-dependent sandbox manager tests

* feat: add early Docker validation in SandboxManager.start_async()

Adds _validate_deployment_prerequisites() method that checks Docker
availability before submitting to the operator, preventing wasted
Ray actor allocation when Docker daemon is not running.

* feat: add need_docker marker to additional Docker-dependent tests

Mark tests in ray_service, docker_deployment, ray_operator, sandbox_http_proxy,
sandbox_manager, and sandbox_proxy that require Docker with @pytest.mark.need_docker
so they are auto-skipped when Docker is unavailable.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -168,6 +168,7 @@ markers = [
     "slow: marks tests as slow",
     "integration: marks tests as integration tests",
     "need_ray: need ray start",
+    "need_docker: need docker daemon running",
     "need_admin: need admin start",
     "need_admin_and_network: need install from network"
 ]
